--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^20.0.2",
+    "@types/node": "^8.0.4",
+    "@types/react": "^15.0.33",
+    "@types/react-dom": "^15.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.2"
+    "redux": "^3.7.1",
+    "redux-devtools-extension": "^2.13.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "react-scripts-ts": "2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
